# book-generator

./: .gitignore  README.md  app.py  pyproject.toml
book_output/: The Art of Programming.txt
src/: generate_contents.py  generate_outline.py  generate_parts.py
